[package]
name = "stroeme_lib"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21.2"
chrono = { version = "0.4.27", features = ["serde"] }
url = { version = "2.4.0", features = ["serde"] }
rand = "0.8.5"
ed25519-dalek = "2.0.0"
uuid = { version = "1.4.1", features = ["serde"] }
blake3 = { version = "1.4.1", features = ["traits-preview"] }
rsa = "0.9.2"
blake2 = "0.10.6"
sha2 = "0.10.7"
sha3 = "0.10.8"
strum = { version = "0.25.0", features = ["derive"] }
reqwest = { version = "0.11.20", features = ["stream"] }
futures-util = "0.3.28"
expanduser = "1.2.2"
futures = "0.3.28"
memmap2 = "0.7.1"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["fs"] }
