[package]
name = "stroeme"
version = "0.0.1"
edition = "2021"
authors = ["nokyan <nokyan@tuta.io>"]
description = "Broker and Distributor programs for the Stroeme protocol"

[[bin]]
name = "broker"
path = "src/broker/bin.rs"

[[bin]]
name = "distributor"
path = "src/distributor/bin.rs"

[dependencies]
stroeme_lib = { path = "../stroeme-lib" }
base64 = "0.21.3"
config = "0.13.3"
ed25519-dalek = { version = "2.0.0", features = ["digest", "pkcs8", "pem"] }
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["json"] }
rocket = { version = "=0.5.0-rc.3", features = ["uuid", "json"] }
url = { version = "2.4.1", features = ["serde"] }
anyhow = "1.0.75"
rayon = "1.7.0"
chrono = { version = "0.4.28", features = ["serde"] }
blake2 = "0.10.6"
sha2 = "0.10.7"
sha3 = "0.10.8"
digest = "0.10.7"
blake3 = "1.4.1"
rsa = { version = "0.9.2", features = ["pem", "sha2", "getrandom"] }
strum = { version = "0.25.0", features = ["derive"] }
expanduser = "1.2.2"
log = "0.4.20"
serde_json = "1.0.105"
